# app.js
@@ -19,6 +19,7 @@ const port = process.env.PORT || 8080;
 app.use(bodyParser.json());
 app.use(express.json());
 app.use(cors());
+app.use("/api/tasks", require("./routes/tasks"));
 
 // Add session middleware
 app.use(session({
